examples/brainfuck/tests/data/incomplete.diag
error: unmatched closing bracket ']'
  ┌─ test:1:48
  │
1 │ ++++++++>++++[>++>+++>+++>+<<<<-]>+>+>->>+[<]<-]>>.>---.+++++++..+++.>>.<-.<.+++.------.--------.>>+.>++.
  │                                                ^

error: invalid syntax, expected one of: ',', '.', <end of file>, '[', '<', '-', '+', '>'
  ┌─ test:1:48
  │
1 │ ++++++++>++++[>++>+++>+++>+<<<<-]>+>+>->>+[<]<-]>>.>---.+++++++..+++.>>.<-.<.+++.------.--------.>>+.>++.
  │      